# autobot

./: .gitignore  GUIA_USO.md  README.md  demo.py  ejemplos_programaticos.py  evaluador_agentes.py  pyproject.toml  requirements.txt  run_demo.py  serve_demo.py  server.js  start.sh  test_evaluador.py
src/autobot/: __init__.py  __main__.py  commands.py  context.py  demo.py  evaluation.py  models.py  personalities.py  scenarios.py  web_demo.py
tests/: test_demo.py  test_models.py  test_web_demo.py
web/: demo.html
